MDEV-34682 Reset spider_hton_ptr in error mode of spider_db_init()